# gnome_memory_leak_ubuntu_22.04

./: crontab_logging_entry.txt  gnome-shell-memory-usage-kb.txt  plot_leak.py  pyproject.toml
